# you need to add here any files you add to the toc directory as well
sphinx_files += files(
  'locations.rst',
  'main.rst',
  'multi_instance.rst',
  'alsa.rst',
  'bluetooth.rst',
  'linking.rst',
  'access.rst',
  'device.rst',
  'stream.rst',
  'config_types.rst',
  'manipulate_configs.rst',
  'access_configs.rst',
  'live_configs.rst',
  'filters.rst',
)
