# you need to add here any files you add to the toc directory as well
sphinx_files += files(
  'locations.rst',
  'main.rst',
  'multi_instance.rst',
  'alsa.rst',
  'bluetooth.rst',
  'linking.rst',
  'access.rst',
  'device.rst',
  'stream.rst',
  'configuration_option_types.rst',
  'manipulate_configuration_options.rst',
  'access_configuration_options.rst',
  'live_configuration_options.rst',
  'filters.rst',
)
