# you need to add here any files you add to the toc directory as well
sphinx_files += files(
  'lua_core_api.rst',
  'lua_gobject.rst',
  'lua_object_api.rst',
  'lua_object_interest_api.rst',
  'lua_object_manager_api.rst',
  'lua_proxies_api.rst',
  'lua_session_item_api.rst',
  'lua_spa_device_api.rst',
)
