# you need to add here any files you add to the toc directory as well
sphinx_files += files(
  'existing_scripts.rst',
  'default_nodes.rst',
  meson.current_source_dir()/'..'/'..'/'..'/'src'/'scripts'/'default-nodes'/'README.rst',
  'device.rst',
  meson.current_source_dir()/'..'/'..'/'..'/'src'/'scripts'/'device'/'README.rst',
  'linking.rst',
  meson.current_source_dir()/'..'/'..'/'..'/'src'/'scripts'/'linking'/'README.rst',
)
