configure_file(input : 'wireplumber.service.in',
               output : 'wireplumber.service',
               configuration : systemd_config,
               install_dir : systemd_user_unit_dir)
configure_file(input : 'wireplumber@.service.in',
               output : 'wireplumber@.service',
               configuration : systemd_config,
               install_dir : systemd_user_unit_dir)
